# kvx

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  docker-compose.yml  postgres.sql
.github/: dependabot.yml
.github/workflows/: check.yml
kvx/: Cargo.toml  README.md
kvx-macros/: Cargo.toml  README.md
kvx-macros/src/: lib.rs
kvx-macros/tests/: tests.rs
kvx-macros/tests/macro/: fail-empty.stderr  fail-namespace-empty.rs  fail-namespace-empty.stderr  fail-segment-empty.rs  fail-segment-empty.stderr  fail-segment-separator.rs  fail-segment-separator.stderr  fail-segment-whitespace-end.rs  fail-segment-whitespace-end.stderr  fail-segment-whitespace-front.stderr  fail-separator.stderr  fail-whitespace-end.stderr  fail-whitespace-front.rs  fail-whitespace-front.stderr  success.rs
kvx-types/: Cargo.toml  README.md
kvx-types/src/: key.rs  lib.rs  namespace.rs  scope.rs  segment.rs
kvx/src/: error.rs  lib.rs  queue.rs
kvx/src/implementations/: disk.rs  memory.rs  mod.rs  postgres.rs
kvx/src/key/: namespace.rs
src/: error.rs  lib.rs  queue.rs
src/blocking/: mod.rs  store.rs
src/blocking/implementations/: disk.rs  memory.rs  mod.rs  postgres.rs
src/implementations/: disk.rs  memory.rs  mod.rs  postgres.rs
src/key/: mod.rs  namespace.rs  scope.rs  segment.rs
src/nonblocking/: store.rs
src/nonblocking/implementations/: postgres.rs
tests/: blocking.rs  nonblocking.rs
