[package]
name = "kvx_macros"
version = "0.3.0"
edition = "2021"
description = "Macros for kvx: an abstraction layer over various key-value store backends"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/tweedegolf/kvx"

[lib]
proc-macro = true

[dependencies]
kvx = "0.3.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.13"
