[package]
name = "kvx_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Macros for kvx: an abstraction layer over various key-value store backends"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
kvx_types = { path = "../kvx-types", version = "0.9.1" }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = "2.0.15"

[dev-dependencies]
trybuild = "1.0.80"
