[package]
name = "kvx_types"
version = "0.1.0"
edition = "2021"

[features]
default = ["postgres"]
postgres = ["dep:postgres", "dep:postgres-types"]

[dependencies]
postgres = { version = "0.19", features = ["with-serde_json-1"], optional = true }
postgres-types = { version = "0.2", features = ["derive"], optional = true }
thiserror = "1.0"
