[package]
name = "kvx_types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Types for kvx: an abstraction layer over various key-value store backends"
readme = "README.md"

[features]
default = ["postgres"]
postgres = ["dep:postgres", "dep:postgres-types"]

[dependencies]
postgres = { version = "0.19", features = ["with-serde_json-1"], optional = true }
postgres-types = { version = "0.2", features = ["derive"], optional = true }
thiserror = "1.0"
