[package]
name = "kvx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Abstraction layer over various key-value store backends"
readme = "README.md"
exclude = [
    "data/*",
    "docker-compose.yml",
    "postgres.sql"
]

[features]
default = ["macros", "postgres", "queue"]
macros = ["dep:kvx_macros"]
postgres = ["dep:postgres", "dep:r2d2_postgres", "dep:postgres-types"]
queue = []

[dependencies]
kvx_macros = { path = "../kvx-macros", version = "0.6.0", optional = true }
kvx_types = { path = "../kvx-types", version = "0.6.0" }
lazy_static = "1.4"
postgres = { version = "0.19", features = ["with-serde_json-1"], optional = true }
postgres-types = { version = "0.2", features = ["derive"], optional = true }
r2d2_postgres = { version = "0.18", optional = true }
rand = "0.8"
serde_json = "1.0"
thiserror = "1.0"
url = "2.3"

[dev-dependencies]
serial_test = "2.0"
